--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
@@ -17,6 +18,7 @@
     "express": "^4.16.4",
     "express-cors": "0.0.3",
     "jsonwebtoken": "^8.3.0",
+    "nunjucks": "^3.2.1",
     "pg": "^7.5.0",
     "supertest": "^4.0.2"
   },
